day10-kubernetes-networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: day10-ingress
  namespace: day10
spec:
  ingressClassName: nginx

  rules:
    - host: day10.local
      http:
        paths:

          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 80
